8206931: Misleading "COMPILE SKIPPED: invalid non-klass dependency" compile log

Reviewed-by: vlivanov, never